--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,18 @@
+{% load static %}
+{# Load the bootstrap4 tag library #}
+{% load bootstrap4 %}
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>{% block title %}LAB Django Auth Tutorial{% endblock %}</title>
+    <meta charset="utf-8">
+    <title>{% block title %}LAB Django Auth Tutorial{% endblock %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
   <main>
