--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
+    <h4 id="home_title">Hi {{ user.username }}!</h4>h4>
   <p><a href="{% url 'logout' %}">logout</a></p>
 {% else %}
-  <p>You are not logged in</p>
+  <p id="warn">You are not logged in</p>
   <a href="{% url 'login' %}">login</a> |
   <a href="{% url 'signup' %}">signup</a>
 {% endif %}
